commit ReWork Design - Rework rounded card

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <!-- #CardMovie-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                  <a class="btn btn-success btn-block round-type" href="typeMovie.html"> Movie </a>
                 </div>
                 <div class="card">
                   <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top "
@@ -230,7 +230,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesKimiNoNawa.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesKimiNoNawa.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardMovie -->
@@ -238,7 +238,7 @@
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                  <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                 </div>
                 <div class="card">
                   <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top"
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesTonikakuKawaii.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesTonikakuKawaii.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
@@ -257,7 +257,7 @@
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                  <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                 </div>
                 <div class="card">
                   <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top"
@@ -268,7 +268,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesMajoNoTabi.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesMajoNoTabi.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
@@ -276,7 +276,7 @@
               <!-- #CardSpecial-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-danger btn-block" href="typeSpecial.html"> Special </a>
+                  <a class="btn btn-danger btn-block round-type" href="typeSpecial.html"> Special </a>
                 </div>
                 <div class="card">
                   <a href="animePagesVioletOva.html" class="myshow"><img class="card-img-top "
@@ -288,7 +288,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesVioletOva.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesVioletOva.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardSpecial -->
@@ -296,7 +296,7 @@
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                  <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                 </div>
                 <div class="card">
                   <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top"
@@ -308,7 +308,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesMushokuTensei.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesMushokuTensei.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
@@ -316,7 +316,7 @@
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                  <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                 </div>
                 <div class="card">
                   <a href="animePagesToaruRailgunT.html" class="myshow"><img class="card-img-top"
@@ -327,7 +327,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesToaruRailgunT.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesToaruRailgunT.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
@@ -335,7 +335,7 @@
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                  <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                 </div>
                 <div class="card">
                   <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top"
@@ -346,7 +346,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesHorimiya.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesHorimiya.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardTv -->
@@ -354,7 +354,7 @@
               <!-- #CardMovie-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                 <div>
-                  <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                  <a class="btn btn-success btn-block round-type" href="typeMovie.html"> Movie </a>
                 </div>
                 <div class="card">
                   <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top "
@@ -365,7 +365,7 @@
                     </div>
                 </div>
                 <div>
-                  <a class="btn btn-primary btn-block" href="animePagesTenkiNoKo.html#download"> Download </a>
+                  <a class="btn btn-primary btn-block round-download" href="animePagesTenkiNoKo.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCardMovie -->
@@ -403,7 +403,7 @@
 
               <!-- #CardUpdate-->
               <div class="col-12 mb-3 rounded-corner">
-                <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
+                <a class="btn btn-success btn-block round-type" href="typeMovie.html"> </a>
                 <div class="card updateCard">
                   <a href="animePagesKimiNoNawa.html">
                     <div class="row no-gutters">
@@ -428,7 +428,7 @@
 
               <!-- #CardUpdate-->
               <div class="col-12 mb-3  rounded-corner">
-                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                <a class="btn btn-warning btn-block round-type" href="typeTv.html"> </a>
                 <div class="card updateCard">
                   <a href="animePagesTonikakuKawaii.html">
                     <div class="row no-gutters">
@@ -453,7 +453,7 @@
 
               <!-- #CardUpdate-->
               <div class="col-12 mb-3 rounded-corner">
-                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                <a class="btn btn-warning btn-block round-type" href="typeTv.html"> </a>
                 <div class="card updateCard">
                   <a href="animePagesMajoNoTabi.html">
                     <div class="row no-gutters">
