--- a/typeMovie.html
+++ b/typeMovie.html
@@ -161,7 +161,7 @@
                             <!-- #CardMovie-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                                    <a class="btn btn-success btn-block round-type" href="typeMovie.html"> Movie </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top "
@@ -173,7 +173,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesKimiNoNawa.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesKimiNoNawa.html#download">
                                         Download </a>
                                 </div>
                             </div>
@@ -182,7 +182,7 @@
                             <!-- #CardMovie-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                                    <a class="btn btn-success btn-block round-type" href="typeMovie.html"> Movie </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top "
@@ -193,7 +193,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesTenkiNoKo.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesTenkiNoKo.html#download">
                                         Download </a>
                                 </div>
                             </div>
