--- a/typeSpecial.html
+++ b/typeSpecial.html
@@ -160,7 +160,7 @@
                             <!-- #CardSpecial-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-danger btn-block" href="typeSpecial.html"> Special </a>
+                                    <a class="btn btn-danger btn-block round-type" href="typeSpecial.html"> Special </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesVioletOva.html" class="myshow"><img class="card-img-top "
@@ -173,7 +173,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesVioletOva.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesVioletOva.html#download">
                                         Download </a>
                                 </div>
                             </div>
