--- a/typeTv.html
+++ b/typeTv.html
@@ -160,7 +160,7 @@
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                    <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top"
@@ -172,7 +172,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesTonikakuKawaii.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesTonikakuKawaii.html#download">
                                         Download </a>
                                 </div>
                             </div>
@@ -181,7 +181,7 @@
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                    <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top"
@@ -193,7 +193,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesMajoNoTabi.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesMajoNoTabi.html#download">
                                         Download </a>
                                 </div>
                             </div>
@@ -202,7 +202,7 @@
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                    <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top"
@@ -215,7 +215,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesMushokuTensei.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesMushokuTensei.html#download">
                                         Download </a>
                                 </div>
                             </div>
@@ -224,7 +224,7 @@
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                    <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesToaruRailgunT.html" class="myshow"><img class="card-img-top"
@@ -236,7 +236,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesToaruRailgunT.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesToaruRailgunT.html#download">
                                         Download </a>
                                 </div>
                             </div>
@@ -245,7 +245,7 @@
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
                                 <div>
-                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                    <a class="btn btn-warning btn-block round-type" href="typeTv.html"> Tv Series </a>
                                 </div>
                                 <div class="card">
                                     <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top"
@@ -256,7 +256,7 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesHorimiya.html#download">
+                                    <a class="btn btn-primary btn-block round-download" href="animePagesHorimiya.html#download">
                                         Download </a>
                                 </div>
                             </div>
