--- a/listLastestUpdate.html
+++ b/listLastestUpdate.html
@@ -169,7 +169,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
+                                <a class="btn btn-success btn-block round-type" href="typeMovie.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesKimiNoNawa.html">
                                         <div class="row no-gutters">
@@ -195,7 +195,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                                <a class="btn btn-warning btn-block round-type" href="typeTv.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesTonikakuKawaii.html">
                                         <div class="row no-gutters">
@@ -221,7 +221,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                                <a class="btn btn-warning btn-block round-type" href="typeTv.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesMajoNoTabi.html">
                                         <div class="row no-gutters">
@@ -247,7 +247,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-danger btn-block" href="typeSpecial.html"> </a>
+                                <a class="btn btn-danger btn-block round-type" href="typeSpecial.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesVioletOva.html">
                                         <div class="row no-gutters">
@@ -274,7 +274,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                                <a class="btn btn-warning btn-block round-type" href="typeTv.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesMushokuTensei.html">
                                         <div class="row no-gutters">
@@ -300,7 +300,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
+                                <a class="btn btn-warning btn-block round-type" href="typeTv.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesToaruRailgunT.html">
                                         <div class="row no-gutters">
@@ -326,7 +326,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-warning btn-block" href="typeTv.html"></a>
+                                <a class="btn btn-warning btn-block round-type" href="typeTv.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesHorimiya.html">
                                         <div class="row no-gutters">
@@ -351,7 +351,7 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3  rounded-corner">
-                                <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
+                                <a class="btn btn-success btn-block round-type" href="typeMovie.html"> </a>
                                 <div class="card updateCard">
                                     <a href="animePagesTenkiNoKo.html">
                                         <div class="row no-gutters">
