--- a/animePagesHorimiya.html
+++ b/animePagesHorimiya.html
@@ -709,28 +709,34 @@
       <div class="col-12 col-lg-3 float-right">
         <div class="col-12">
           <div class="row justify-content-center">
-            <div id="gfrom" class="rounded-corner mb-1">
-              <!-- <a href="randomPatchNote.html">
-              <img src="img/banner_gform.png" alt="" class="rounded-corner">
-              </a> -->
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
+              <iframe width="240" height="235" src="https://trakteer.id/serayu/stream/target?key=trstream-JQHcdahtgH9eoM1mgjFw&t_bgclr=rgba%2832%2C+104%2C+241%2C+1%29&t_fgclr=rgba%28250%2C+250%2C+250%2C+1%29&t_hgclr=rgba%28255%2C+193%2C+7%2C+0.8156862745098039%29&t_showlink=true&t_txtshadow=false" frameborder="0"></iframe>
             </div>
-          </div>
-        </div>
-        <div class="col-12 sticky-top">
-          <div class="row justify-content-center">
+
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
+              <img src="img/banner_gform.png" alt="">
+            </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
               <iframe src="https://discord.com/widget?id=788456247476617326&theme=dark" width="225" height="350"
                 allowtransparency="true" frameborder="0"
                 sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
-
+            
+          </div>
+        </div>
+        <div class="col-12 sticky-top">
+          <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
               <iframe
                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=225&height=300&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                 width="225" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                 allowfullscreen="true"
                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center example">
+              <iframe width="240" height="400" src="https://trakteer.id/serayu/stream/top-supporters?key=trstream-JQHcdahtgH9eoM1mgjFw&ts_bgclr=rgba%280%2C+123%2C+255%2C+0.8156862745098039%29&ts_hg1clr=rgba%28255%2C+193%2C+7%2C+1%29&ts_hg2clr=rgba%28163%2C+53%2C+238%2C+1%29&ts_hg3clr=rgba%280%2C+112%2C+221%2C+1%29&ts_interval=30&ts_customtitle=Yang+Beliin+D.Vid+Sempak&ts_customsubtitle=Kawan+D.Vid" frameborder="0"></iframe>
             </div>
 
           </div>
