--- a/footPrivacyPolicy.html
+++ b/footPrivacyPolicy.html
@@ -44,12 +44,12 @@
 
   <!-- #Header-->
   <nav class="navbar navbar-expand-xl navbar-dark bg-dark mb-4">
-    <div class="container-fluid ">
+    <div class="container">
 
       <a class="navbar-brand" href="index.html" style="color: white;">
         <a class="navbar-brand" href="index.html">
           <img src="img/SeraYu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-          SeraYu Fansub 60 FPS</a>
+          SeraYu Fansub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -301,7 +301,9 @@
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
-              <img src="img/banner_gform.png" alt="">
+              <a href="randomPatchNote.html">
+                <img src="img/banner_gform.png" alt="">
+              </a>
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
