--- a/randomPatchNote.html
+++ b/randomPatchNote.html
@@ -154,7 +154,7 @@
                                     <a data-toggle="collapse" href="#collapseMainDesc" role="button"
                                         aria-expanded="false" aria-controls="collapseMainDesc">
                                         <div class="btn-primary text-center rounded-corner border score mb-1">
-                                            About Us
+                                            Patch Notes
                                         </div>
                                     </a>
                                     <hr>
