commit ReWork Design - sidebar anchor

--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -160,11 +160,24 @@
                   <hr>
 
                   <div class="collapse show " id="collapseMainDesc">
-                    <h1>About </h1>
+                    <h1>About us </h1>
                     <h1>Serayu Fansub</h1>
 
+                    <h4>Sejarah</h4>
+                    <p>Serayu merupakan Fansub penyedia anime 60 fps dengan kualitas yang bagus serta ramah size. Anime
+                      yang disediakan di serayu fansub merupakan anime 60 fps dengan kualitas 1080p.</p>
+                    <p>Serayu pertama kali dibentuk pada tahun 2019 yang bermula dari orang gabut yang bercanda kalau
+                      kita akan buat website, dan akhirnya sekitar tahun 2020 silam, tahap alpha test website serayu
+                      resmi meluncur di internet, dan pada bulan maret tahun 2021, kami melakukan closed beta dan semoga
+                      serayu akan meluncur resmi secepatnya!</p>
 
+                    <h4>Apa itu anime 60 fps dan perbedaan nya dari anime lain</h4>
 
+                    <p>Sama seperti di game, semakin tinggi frame per second (fps) maka akan semakin halus pergerakan
+                      yang terlihat oleh mata untuk perbedaan nya kalian bisa lihat seperti ini</p>
+                    <p>(perbandingan video raw kita) vs (konten 60 fps kita)</p>
+                    <p>*Note (nanti itu berupa video singkat 15 detik perbandingan nya + nanti di hardsub juga untuk
+                      video ny)</p>
 
                   </div>
 
@@ -182,7 +195,9 @@
         <div class="col-12">
           <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
-              <iframe width="240" height="235" src="https://trakteer.id/serayu/stream/target?key=trstream-JQHcdahtgH9eoM1mgjFw&t_bgclr=rgba%2832%2C+104%2C+241%2C+1%29&t_fgclr=rgba%28250%2C+250%2C+250%2C+1%29&t_hgclr=rgba%28255%2C+193%2C+7%2C+0.8156862745098039%29&t_showlink=true&t_txtshadow=false" frameborder="0"></iframe>
+              <iframe width="240" height="235"
+                src="https://trakteer.id/serayu/stream/target?key=trstream-JQHcdahtgH9eoM1mgjFw&t_bgclr=rgba%2832%2C+104%2C+241%2C+1%29&t_fgclr=rgba%28250%2C+250%2C+250%2C+1%29&t_hgclr=rgba%28255%2C+193%2C+7%2C+0.8156862745098039%29&t_showlink=true&t_txtshadow=false"
+                frameborder="0"></iframe>
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
@@ -196,7 +211,7 @@
                 allowtransparency="true" frameborder="0"
                 sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
-            
+
           </div>
         </div>
         <div class="col-12 sticky-top">
@@ -210,7 +225,9 @@
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center example">
-              <iframe width="240" height="400" src="https://trakteer.id/serayu/stream/top-supporters?key=trstream-JQHcdahtgH9eoM1mgjFw&ts_bgclr=rgba%280%2C+123%2C+255%2C+0.8156862745098039%29&ts_hg1clr=rgba%28255%2C+193%2C+7%2C+1%29&ts_hg2clr=rgba%28163%2C+53%2C+238%2C+1%29&ts_hg3clr=rgba%280%2C+112%2C+221%2C+1%29&ts_interval=30&ts_customtitle=Yang+Beliin+D.Vid+Sempak&ts_customsubtitle=Kawan+D.Vid" frameborder="0"></iframe>
+              <iframe width="240" height="400"
+                src="https://trakteer.id/serayu/stream/top-supporters?key=trstream-JQHcdahtgH9eoM1mgjFw&ts_bgclr=rgba%280%2C+123%2C+255%2C+0.8156862745098039%29&ts_hg1clr=rgba%28255%2C+193%2C+7%2C+1%29&ts_hg2clr=rgba%28163%2C+53%2C+238%2C+1%29&ts_hg3clr=rgba%280%2C+112%2C+221%2C+1%29&ts_interval=30&ts_customtitle=Yang+Beliin+D.Vid+Sempak&ts_customsubtitle=Kawan+D.Vid"
+                frameborder="0"></iframe>
             </div>
 
           </div>
