--- a/typeMovie.html
+++ b/typeMovie.html
@@ -232,14 +232,15 @@
       <div class="col-12 col-lg-3 float-right">
         <div class="col-12">
           <div class="row justify-content-center">
-            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
-              <iframe width="240" height="235" src="https://trakteer.id/serayu/stream/target?key=trstream-JQHcdahtgH9eoM1mgjFw&t_bgclr=rgba%2832%2C+104%2C+241%2C+1%29&t_fgclr=rgba%28250%2C+250%2C+250%2C+1%29&t_hgclr=rgba%28255%2C+193%2C+7%2C+0.8156862745098039%29&t_showlink=true&t_txtshadow=false" frameborder="0"></iframe>
-            </div>
-
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
               <a href="randomPatchNote.html">
                 <img src="img/banner_gform.png" alt="">
               </a>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
+              <iframe id="if-id" width="240" height="235" src="https://trakteer.id/serayu/stream/target?key=trstream-JQHcdahtgH9eoM1mgjFw&t_bgclr=rgba%2832%2C+104%2C+241%2C+1%29&t_fgclr=rgba%28250%2C+250%2C+250%2C+1%29&t_hgclr=rgba%28255%2C+193%2C+7%2C+0.8156862745098039%29&t_showlink=true&t_txtshadow=false" frameborder="0"></iframe>
+              <a id="a-id" href="https://trakteer.id/serayu"></a>
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
