--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Serayu Fansub</title>
+  <title>Serayu Fansub 2</title>
 
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
