commit ReWork Design - test branch fix

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
   <style>
     /* Background wallpaper */
-    /* body {
+    body {
       background-image: url(img/serayu_bg_light.png);
       background-size: cover;
       background-attachment: fixed;
-    } */
+    }
   </style>
 
 </head>
