--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
   <!-- css bootstrap -->
-  <!-- <link href="vendor/css/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"> -->
+  <link href="vendor/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
   <!-- Css main-->
   <link rel="stylesheet" href="css/styleMain.css">
