--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -179,6 +179,14 @@
                     <p>*Note (nanti itu berupa video singkat 15 detik perbandingan nya + nanti di hardsub juga untuk
                       video ny)</p>
 
+                    <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
+                      <video controls autoplay>
+                        <source src="vid/myNameisRick.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                      </video>
+                      
+                    </div>
+
                   </div>
 
                 </div>
