--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -176,23 +176,21 @@
                     <button onclick="playVid()" type="button">Play Video</button>
                     <button onclick="pauseVid()" type="button">Pause Video</button><br>
 
-                    <div id="myVideo"
-                      class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
-                      <video controls autoplay>
+                    <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
+                      <video controls id="myVideo">
                         <source src="vid/myNameisRick.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video>
                     </div>
 
-                    <div id="myVideo1"
-                      class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
-                      <video controls autoplay>
+                    <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
+                      <video controls id="myVideo1">
                         <source src="vid/myNameisRick.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video>
                     </div>
 
-                    
+
 
                     <p>Sama seperti di game, semakin tinggi frame per second (fps) maka akan semakin halus pergerakan
                       yang terlihat oleh mata untuk perbedaan nya kalian bisa lihat seperti ini</p>
