--- a/typeTv.html
+++ b/typeTv.html
@@ -357,8 +357,21 @@
             </ul>
             <p class="copyright">Serayu Fansub © 2021</p>
         </footer>
-    </div>
     <!-- Footer -->
+
+  <!-- JavaScript -->
+  <script src="js/scriptMain.js"></script>
+
+
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="vendor/js/jquery-3.5.1.min.js">
+  </script>
+  <script src="vendor/js/popper.min.js">
+  </script>
+  <script src="vendor/js/bootstrap.js">
+  </script>
+  <!-- #endJavaScript -->
 
 
 
