--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -186,7 +186,7 @@
     
                         <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
                           <video controls id="myVideo1">
-                            <source src="vid/myNameisRick.mp4" type="video/mp4">
+                            <source src="vid/rico.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video>
                         </div>
