--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -179,14 +179,14 @@
     
                         <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
                           <video controls id="myVideo">
-                            <source src="vid/60fps.mp4" type="video/mp4">
+                            <source src="vid/me60fps.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video>
                         </div>
     
                         <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
                           <video controls id="myVideo1">
-                            <source src="vid/30fps.mp4" type="video/mp4">
+                            <source src="vid/me30fps.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                           </video>
                         </div>
