commit ReWork Design - Video mememe about us reset button

--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -162,14 +162,21 @@
                     <h4>Apa itu anime 60 fps dan perbedaan nya dari anime lain</h4>
                     <div class="col-12">
                       <div class="row">
-                        <div class="col-5 offset-1 px-0 pr-2 py-1 ">
+                        <div class="col-4 offset-1 px-0 py-1 ">
                           <a onclick="playVid();playVid2()" href="#myVideo">
                             <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
                               Play Video
                             </div>
                           </a>
                         </div>
-                        <div class="col-5 px-0 pl-2 py-1 ">
+                        <div class="col-3 px-0 py-1 ">
+                          <a onclick="resetvid();resetvid2()" href="#myVideo">
+                            <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
+                              Reset Video
+                            </div>
+                          </a>
+                        </div>
+                        <div class="col-3 px-0 py-1 ">
                           <a onclick="stopvid();stopvid2()" href="#myVideo">
                             <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
                               Pause Video
