commit ReWork Design - Video mememe about us reset button no space

--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -165,21 +165,21 @@
                         <div class="col-4 offset-1 px-0 py-1 ">
                           <a onclick="playVid();playVid2()" href="#myVideo">
                             <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
-                              Play Video
+                              Play&nbsp;Video
                             </div>
                           </a>
                         </div>
                         <div class="col-3 px-0 py-1 ">
                           <a onclick="resetvid();resetvid2()" href="#myVideo">
                             <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
-                              Reset Video
+                              Reset&nbsp;Video
                             </div>
                           </a>
                         </div>
                         <div class="col-3 px-0 py-1 ">
                           <a onclick="stopvid();stopvid2()" href="#myVideo">
                             <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
-                              Pause Video
+                              Pause&nbsp;Video
                             </div>
                           </a>
                         </div>
